--- a/index.css
+++ b/index.css
@@ -11,8 +11,10 @@ body{
 #sideboard{
     flex: 1 1 auto;
     background-color: rgb(0, 162, 255);
-    height: 100vh;
-    
+    height: 120vh;
+    min-height: 900px;
+    min-width: 250px;
+
     display:grid;
     grid-template-rows: 75px;
     grid-auto-rows: 75px;
@@ -45,12 +47,15 @@ svg{
     color: white;
 }
 
+.sideboardLinks:hover{
+    text-decoration: underline;
+}
+
 #content{
     flex:9 1 auto;
     background-color: white;
-
-    display:grid;
-    grid-template-rows: 20vh 80vh;
+    display:flex;
+    flex-direction: column;
 }
 
 #header{
@@ -67,18 +72,34 @@ svg{
 #headerSearch{
     display:grid;
     grid-template-columns: 10% 90%;
-    gap: 10px;
     place-items: center;
 }
 
 #searchbar{
     place-self:center start;
-    width: 250px;
+    width: 0px;
+    border:none;
+    position: relative;
+    transition-duration: 0.25s;
+}
+
+#searchIcon:hover ~ #searchbar{
+    width:250px;
+
     background-color: rgb(219, 214, 214);
     border-color:rgb(204, 200, 200);
     border-radius: 10px;
     border-style: solid;
+}
 
+#searchbar:hover{
+    width:250px;
+
+    background-color: rgb(219, 214, 214);
+    border-color:rgb(204, 200, 200);
+    border-radius: 10px;
+    border-style: solid;
+    
 }
 
 #upright{
@@ -169,4 +190,71 @@ svg{
     border-radius: 25px;
 
     font-size: 20px;
+
+    transition: 0.25s;
 }
+
+#header .button:hover{
+    box-shadow:inset 130px 0 0 0 rgb(40, 68, 146);
+    
+}
+
+
+#elements{
+    display:grid;
+    min-height: 50vh;
+    max-height: 80vh;
+
+    grid-template-columns: 70% 30%;
+}
+
+#elements *{
+    font-family: Arial;
+}
+
+#cardBox{
+    display:flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding-left:20px;
+}
+
+.card{
+    display:flex;
+    flex-direction: column;
+    width: 450px;
+    height:215px;
+    padding:15px;
+   
+    border-style: hidden;
+    border-radius: 5px;
+    border-left-color: rgb(255, 187, 0);
+    border-left-style: solid;
+    border-left-width: 7px;
+
+    align-items: start;
+    justify-content: center;
+
+    box-shadow: 0 3px 4px rgb(0 0 0 / 0.3);
+    
+}
+
+
+
+.card .iconHolder{
+    width: inherit;
+    display: flex;
+    justify-content: flex-end;
+    gap:25px;
+
+    margin-top: 20px;
+}
+
+.card h2,p{
+    margin: 0px;
+}
+
+.card p{
+    color: rgba(0, 0, 0, 0.6);
+}
+
