--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
 body{
     margin:0;
+    height: 100vh;
 }
 
 #container{
+    max-height: 100vh;
     display:flex;
     flex-direction:row;
 }
@@ -11,9 +13,9 @@ body{
 #sideboard{
     flex: 1 1 auto;
     background-color: rgb(0, 162, 255);
-    height: 120vh;
-    min-height: 900px;
+    height: auto;
     min-width: 250px;
+    overflow-y: visible;
 
     display:grid;
     grid-template-rows: 75px;
@@ -54,8 +56,8 @@ svg{
 #content{
     flex:9 1 auto;
     background-color: white;
-    display:flex;
-    flex-direction: column;
+    display:grid;
+    grid-template-rows: auto 1fr;
 }
 
 #header{
@@ -64,9 +66,10 @@ svg{
     grid-template-columns: 60% 40%;
     grid-template-rows: 50% 50%;
     
-    min-width: 0px;
     min-height: 200px;
     box-shadow:  0 3px 10px rgb(0 0 0 / 0.2);
+
+    
 }
 
 #headerSearch{
@@ -206,10 +209,19 @@ svg{
     max-height: 80vh;
 
     grid-template-columns: 70% 30%;
+    
+    padding-bottom: 25px;
+
+    overflow: auto;
+
 }
 
 #elements *{
     font-family: Arial;
+}
+
+#elements #left .head{
+    padding-left: 20px;
 }
 
 #cardBox{
@@ -228,7 +240,7 @@ svg{
    
     border-style: hidden;
     border-radius: 5px;
-    border-left-color: rgb(255, 187, 0);
+    border-left-color: rgb(214, 152, 158);
     border-left-style: solid;
     border-left-width: 7px;
 
@@ -237,6 +249,11 @@ svg{
 
     box-shadow: 0 3px 4px rgb(0 0 0 / 0.3);
     
+    transition: all .3s ease-in-out 0s;
+}
+
+.card:hover{
+    transform: translateY(-3px);
 }
 
 
@@ -250,6 +267,10 @@ svg{
     margin-top: 20px;
 }
 
+.icon:hover path{
+    fill:rgb(0, 162, 255);
+}
+
 .card h2,p{
     margin: 0px;
 }
@@ -257,4 +278,82 @@ svg{
 .card p{
     color: rgba(0, 0, 0, 0.6);
 }
+
+.sideBox{
+    display:flex;
+    flex-direction: column;
+    width: 20em;
+    border-radius: 10px;
+
+    box-shadow: 0 3px 4px rgb(0 0 0 / 0.3);
+}
+
+.sideBox *{
+    margin:0px;
+    
+
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#right p{
+    color: rgba(54, 54, 54, 0.705);
+}
+
+.sideBox .textBox{
+    padding-top:30px;
+    padding-bottom: 30px;
+
+    margin-left: 30px;
+    margin-right: 30px;
+
+    border-bottom: solid;
+    border-bottom-color: rgba(0, 0, 0, 0.171);
+    border-bottom-width: 1px;
+}
+
+#last{
+    border-bottom: none;
+}
+
+#userBoxBox{
+    display: flex;
+    flex-direction: column;
+    width: 20em;
+
+    border-radius: 10px;
+
+    box-shadow: 0 3px 4px rgb(0 0 0 / 0.3);
+
+    row-gap: 25px;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.userBox{
+    display:grid;
+
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+
+    grid-template-areas: 
+    "img head"
+    "img text";
+
+}
+
+.userBox img{
+    grid-area: img;
+
+    height: 45px;
+    width: 45px;
+    border-radius: 30px;
+    justify-self:center;
+    align-self: center;
+}
+
+.userBox *{
+    margin:0px;
+    font-family: Arial, Helvetica, sans-serif;
+    }
 
